Fix margin spacing on popular page

--- a/app/index.css
+++ b/app/index.css
@@ -1,6 +1,3 @@
-/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,embed,iframe,object,audio,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}
-
-/* ============= */
 
 html {
   font-family: sans-serif;
@@ -46,9 +43,13 @@ h1 {
   overflow-x: hidden;
 }
 
+.popular-body {
+  margin-top: 3rem;
+}
+
 .popular-list {
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin-top: 2rem;
 }
@@ -65,6 +66,7 @@ h1 {
 
 .main-nav {
   display: flex;
+
 }
 
 .main-nav__item {
@@ -94,7 +96,8 @@ h1 {
   transition: box-shadow 0.2s linear;
 }
 
-.button:hover, .battle-button:focus {
+.button:hover,
+.battle-button:focus {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
@@ -109,13 +112,14 @@ h1 {
 
 .row {
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .battle-form {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 31rem;
   align-items: center;
   margin-top: 1rem;
 }
